Resolves: fdo#38983 allow extra word boundary characters

i.e. word overrides emdash and endash to be word boundary characters
for the purposes of counting words. And there are some who want
to treat =,- etc similarly.

Default to a configuration that gives the same results as Word for
word counting.

Change-Id: Ia8ce6ac12011a1d6e547f11644c76163c4c993c5